<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="more_modes">More Modes</string>
    <string name="text_button_delay">DELAY</string>
    <string name="broil">Broil</string>
    <string name="text_tile_decision_large_medium">Medium</string>
    <string name="text_status_oven_ready">Oven Ready</string>
    <string name="text_button_set_cook_time">SET COOK TIME</string>
    <string name="text_button_start">START</string>
    <string name="text_button_update">UPDATE</string>
    <string name="text_information_bake">Utilizes all the elements and fan to enhance\nperformance and heat distribution to be used for the\nmajority of recipes. For best performance, wait to put\nfood in until preheating is completed.</string>
    <string name="text_description_keepWarm">Keep tempting dishes ready and waiting for the right moment.</string>
    <string name="keepWarm">Keep Warm</string>
    <string name="proof">Proof</string>
    <string name="bake">Bake</string>
    <string name="clock_text_oven_cooling">%1$s cooling</string>
    <string name="text_description_convectBroil">This mode blends high-intensity heat and even\nconvection for restaurant-quality searing outside and\nsucculent cooking inside.</string>
    <string name="convectBroil">Convect Broil</string>
    <string name="text_button_wait_for_preheat">WAIT FOR PREHEAT</string>
    <string name="convect">Convect</string>
    <string name="text_button_done">DONE</string>
    <string name="text_description_dehydration">Combines convection fans and precise low temperatures\nto extract moisture and create delicacies like dried fruits\nand fine jerky. For top-tier performance, dehydrate one\nrack at a time, or use the air fry basket for swift, high-end\ndrying. Elevate your culinary creations and savor gourmet\ntreats, all in the luxury of your own kitchen.
</string>
    <string name="dehydration">Dehydrate</string>
    <string name="airFry">Air Fry</string>
    <string name="text_button_return_to_probe_modes">RETURN TO PROBE MODES</string>
    <string name="probe">Probe</string>
    <string name="meat">Meats</string>
    <string name="text_button_yes">YES</string>
    <string name="text_button_no">NO</string>
    <string name="text_button_cancel">CANCEL</string>
    <string name="text_header_paused">Paused</string>
    <string name="convectRoast">Convect Roast</string>
    <string name="convectBake">Convect Bake</string>
    <string name="text_layout_popup_information_popcornHUMMW">Quickly and evenly pop popcorn kernels, ensuring a\ndelicious and convenient snack. Pop only 1 package at a\ntime.</string>
    <string name="popcoHUMMW">Popcorn</string>
    <string name="mwSteamCook">Steam Cook</string>
    <string name="cavity_selection_lower_oven_all_cap">LOWER OVEN</string>
    <string name="text_header_soil_level">Soil Level</string>
    <string name="text_header_prepare_oven">Prepare oven</string>
    <string name="text_header_press_start">Press Start</string>
    <string name="text_description_door_locking">Please do not try to open the door.</string>
    <string name="text_header_start_after">Start After</string>
    <string name="text_button_start_delay">START DELAY</string>
    <string name="text_sabbath">Sabbath</string>
    <string name="text_description_exist_sabbath_mode">Press and hold anywhere on the screen for 3 seconds\nto disable Sabbath Mode</string>
    <string name="text_button_set">SET</string>
    <string name="sabbathBake">Sabbath Bake</string>
    <string name="chickWholeProbConveRoast">Chicken Whole</string>
    <string name="turkeBreasProbConveRoast">Turkey Breast</string>
    <string name="porkRoastProbConvectRoast">Pork Roast</string>
    <string name="chickNuggeToas">Frozen Chicken Nuggets</string>
    <string name="text_header_servings">Serving</string>
    <string name="text_header_cups">Cups</string>
    <string name="text_header_doneness">Doneness</string>
    <string name="text_header_cooking_guide">Cooking Guide</string>
    <string name="text_header_history">History</string>
    <string name="text_see_video_favorites">Favorites</string>
    <string name="service_support">Service and Support</string>
    <string name="text_header_service_mode">Service Diagnostics</string>
    <string name="text_button_enter">ENTER</string>
    <string name="str_auto_diagnostics">Auto Diagnostics</string>
    <string name="str_error_code_history">Error Codes History</string>
    <string name="str_system_info">System Info</string>
    <string name="text_header_service_diagnostics">Service Diagnostics</string>
    <string name="str_component_activation">Component Activation</string>
    <string name="text_button_exit">EXIT</string>
    <string name="text_button_clear_all">CLEAR ALL</string>
    <string name="text_header_error_code_history">Error Codes History</string>
    <string name="str_no_errors_found">No errors found.</string>
    <string name="text_layout_pop_up_decision_return_previous_step">Press CLEAR ERRORS to proceed or press CANCEL to return to previous step.</string>
    <string name="text_header_clear_errors">Clear Errors</string>
    <string name="text_button_clear_errors">CLEAR ERRORS</string>
    <string name="text_auto_diagnostics_exit_popup_title">End of Auto Diagnostics</string>
    <string name="text_auto_diagnostics_exit_popup_description">Error Codes History has been cleared</string>
    <string name="text_auto_diagnostics_entry_popup_title">Start Auto Diagnostics</string>
    <string name="text_auto_diagnostics_entry_popup_description">Once the Auto Diagnostic begins all past stored error codes will be cleared. Do you wish to continue?</string>
    <string name="text_button_continue">CONTINUE</string>
    <string name="text_header_auto_diagnostics">Auto Diagnostics</string>
    <string name="text_button_run_test">RUN TEST</string>
    <string name="text_sub_mode_power">POWER</string>
    <string name="text_str_skip_step">SKIP TEST</string>
    <string name="str_test_result">RESULTS</string>
    <string name="text_mode_temp_complete">COMPLETED</string>
    <string name="text_status_bottom_line_long_pres_results">Press results to continue</string>
    <string name="text_button_retry_auto_diagnostics">RETRY</string>
    <string name="text_layout_information_paragraph_qr_code_error_description_step_1_sub_mode_power">Check wiring to appliance</string>
    <string name="text_header_system_info">System Info</string>
    <string name="diagnostics_label_wifi">Wi-Fi</string>
    <string name="diagnostics_label_product">Product</string>
    <string name="text_header_product">Product</string>
    <string name="str_soft_reboot">Soft Reboot</string>
    <string name="text_tiles_list_restore_factory">Restore Factory Defaults</string>
    <string name="text_hedaer_restore_factory">Reboot &amp; Reset</string>
    <string name="text_button_proceed">PROCEED</string>
    <string name="text_layout_information_paragraph_qr_code_restart_appliance">This action will restore the product to default settings.</string>
    <string name="text_header_soft_reboot">Soft Reboot</string>
    <string name="text_button_stop">STOP</string>
    <string name="text_button_sensor_feedback">SENSOR FEEDBACK</string>
    <string name="text_header_component_activation">Component Activation</string>
    <string name="text_header_fan_cavity">Fan Cavity</string>
    <string name="text_core_helper_info_tech_guide">Please refer to technician guide.</string>
    <string name="text_core_tiles_settings_cooling_fan">Cooling Fan</string>
    <string name="text_core_tiles_settings_bake_sensor_cavity_rtd">Cavity RTD</string>
    <string name="str_component_state">{0} ({1}) Active</string>
    <string name="sensor_feedback">Sensor Feedback</string>
    <string name="text_header_cooling_down">%1$s is Cooling Down</string>
    <string name="text_hot_cavity_oven_cooling_food_inside_message_single_cavity">%1$s is too hot. Wait until the temperature decreases\nto place the food inside.</string>
    <string name="text_hot_cavity_oven_ready_message_single_cavity">%1$s is ready for cooking, please place the food in\nand press NEXT to proceed.</string>
    <string name="text_header_oven_ready">%1$s Ready</string>
    <string name="text_power_loss_popup_title">Power Loss Occurred</string>
    <string name="preferences">Preferences</string>
    <string name="self_clean">Self Clean</string>
    <string name="text_tiles_list_french_canadian">Canadian French</string>
    <string name="text_tiles_list_spanish">Spanish</string>
    <string name="text_said">Smart appliance ID (SAID):\n%s</string>
    <string name="connect_to_network">Connect to Network</string>
    <string name="text_header_welcome">Welcome</string>
    <string name="text_button_set_up_later">SETUP LATER</string>
    <string name="text_temp_submode_power">POWER</string>
    <string name="text_temp_submode_fan">FAN</string>
    <string name="text_oven_cooling">%s oven cooling</string>
    <string name="text_button_update_now">UPDATE NOW</string>
    <string name="text_header_software_update_skipped">Software Update Skipped</string>
    <string name="text_widget_description_update_skipped">You have chosen to skip this update. Future software updates may include features from this update.</string>
    <string name="text_header_software_update_successful">Software Update Successful</string>
    <string name="text_header_software_installation_failed">Software Installation Failed</string>
    <string name="text_layout_pop_up_decision_an_error_was_occurred_during_the_download">An error occurred during the download stage and the\nappliance was safely restored to the previous\nsoftware version. Press <b>RETRY</b> to re-attempt the\ndownload or press <b>DISMISS</b> to try again later.</string>
    <string name="text_button_retry">RETRY</string>
    <string name="text_header_ready_at">Ready at</string>
    <string name="text_button_try_again">TRY AGAIN</string>
    <string name="text_button_pair">PAIR</string>
    <string name="text_pin">PIN</string>
    <string name="text_button_finish">FINISH</string>
    <string name="remote_enable">Remote Enable</string>
    <string name="text_button_update_available">UPDATE AVAILABLE</string>
    <string name="text_header_failed_to_connect">Failed to Connect</string>
    <string name="text_pairing_failed_body">Press the <b>TRY AGAIN</b> button to retry pairing. Check\nthe app for more details.</string>
    <string name="text_header_pairing_failed">Pairing Failed</string>
    <string name="text_header_incorrect_password">Incorrect password</string>
    <string name="text_fault_description_service_support">To resolve the issue with your oven, please scan the QR code below to contact service support</string>
    <string name="text_button_explore_product">EXPLORE PRODUCT</string>
    <string name="text_button_see_videos">SEE VIDEOS</string>
    <string name="text_label_M">M</string>
    <string name="text_label_H">H</string>
    <string name="app_name">KitchenAid</string>
    <string name="text_button_next">NEXT</string>
    <string name="text_error_helper_description">Enter a cook time less than %1$s</string>
    <string name="text_header_power">Power</string>
    <string name="text_connect_device_info">1. Scan the QR code to download the\nKitchenAid app on your phone.\n2. Make sure Bluetooth on your phone\nis ON.\n3. Make sure your phone is connected\nto your Wi-Fi network.\n4. Follow instructions on your mobile\ndevice to continue.\n</string>
    <string name="text_description_pairing_in_process">Please follow instructions on the mobile app and return to\nthis screen when completed.</string>
    <string name="text_title_pairing_in_process">Pairing in process</string>
    <string name="text_description_connecting_to_WiFi">Attempting to connect to WiFi network. This may take up\nto 2 minutes.</string>
    <string name="text_exit_demo">EXIT DEMO</string>
    <string name="text_button_connectLater">CONNECT LATER</string>
</resources>