<?xml version="1.0" encoding="utf-8"?><!--
  ~ *************************************************************************************************
  ~ ****** Copyright (c) 2023. Whirlpool Corporation. All rights reserved - CONFIDENTIAL *****
  ~ *************************************************************************************************
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_service_and_support_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <android.presenter.customviews.widgets.headerbar.HeaderBarWidget
            android:id="@+id/header_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/common_solid_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/qr_code"
            style="@style/StyleQrCodeImageView"
            android:contentDescription="@string/app_name"
            android:layout_marginStart="@dimen/qr_code_margin_start"
            android:layout_marginTop="@dimen/upToDate_icon_margin_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@drawable/connected_app_qr_code_square" />

        <FrameLayout
            android:id="@+id/pin_info"
            android:layout_width="@dimen/upToDate_icon_width_height"
            android:layout_height="@dimen/upToDate_icon_width_height"
            android:layout_marginStart="@dimen/qr_code_margin_start"
            android:layout_marginTop="@dimen/upToDate_icon_margin_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_view_pin"
                style="@style/StyleOTAVersionHeader"
                android:text="@string/text_pin"
                android:visibility="gone" />

            <TextView
                android:id="@+id/text_view_pin_number"
                style="@style/StyleOTAVersionNumber"
                android:visibility="gone" />
        </FrameLayout>

        <ScrollView
            android:id="@+id/information_primary_scroll_view"
            style="@style/StyleNewFeatureTextScrollBar"
            android:scrollbarSize="@dimen/information_primary_scroll_view_scroll_bar_size"
            android:layout_marginTop="@dimen/upToDate_icon_margin_top"
            android:verticalScrollbarPosition="right"
            android:layout_height="@dimen/information_primary_scroll_view_height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/llInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_view_SAID"
                    style="@style/StyleInformationUpToDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:text="@string/text_said"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_view_description"
                    style="@style/StyleInformationUpToDateDateTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:text="@string/text_connect_device_info"
                    app:layout_constraintStart_toStartOf="@+id/text_view_SAID"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_SAID" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <com.whirlpool.hmi.uicomponents.widgets.buttons.NavigationButton
            android:id="@+id/navigation_button_right"
            style="@style/TumblerNumericPrimaryBtnStyle"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:text="@string/text_button_pair"
            android:layout_marginEnd="@dimen/tumbler_btn_margin_bottom"
            android:layout_marginBottom="@dimen/cn_btn_margin_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.whirlpool.hmi.uicomponents.widgets.buttons.NavigationButton
            android:id="@+id/navigation_button_left"
            style="@style/StyleConnectLater"
            android:background="@drawable/text_view_ripple_effect"
            android:gravity="center_horizontal|center_vertical"
            android:includeFontPadding="false"
            android:text="@string/text_button_connectLater"
            android:visibility="gone"
            android:textAllCaps="false"
            app:backgroundTint="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

