<?xml version="1.0" encoding="utf-8"?><!--
  ~ *************************************************************************************************
  ~ ****** Copyright (c) 2024. Whirlpool Corporation. All rights reserved - CONFIDENTIAL *****
  ~ *************************************************************************************************
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_provisioning_status_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:transitionGroup="false">

        <android.presenter.customviews.widgets.headerbar.HeaderBarWidget
            android:id="@+id/header_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/service_and_support_header_height"
            android:layout_marginEnd="@dimen/dp_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_view_pairing_in_progress"
                style="@style/PopupTitleTextViewStyle"
                android:layout_marginTop="@dimen/pairing_in_progress_margin_top"
                android:gravity="center"
                android:layout_marginHorizontal="@dimen/pairing_in_progress_margin_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header_bar"
                tools:text="@string/text_title_pairing_in_process" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_view_remote_enable_description"
                style="@style/PopupTitleTextViewStyle"
                android:textFontWeight="@integer/error_type_a_description_font_weight_300"
                android:fontFamily="@font/roboto_light"
                android:layout_marginTop="@dimen/pairing_in_progress_description_margin_top"
                android:gravity="center"
                android:layout_marginHorizontal="@dimen/pairing_in_progress_margin_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_pairing_in_progress"
                tools:text="@string/text_description_pairing_in_process" />

            <android.presenter.fragments.step_progress_bar.StepProgressBar
                android:id="@+id/step_progress_bar_information"
                style="@style/StyleProgressBarInformationStepProgressBarChild"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_pairing_in_progress"
                tools:layout_conversion_wrapHeight="0"
                tools:layout_conversion_wrapWidth="0"
                tools:visibility="visible" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_view_pairing_in_progress_description"
                style="@style/PopupTitleTextViewStyle"
                android:textFontWeight="@integer/error_type_a_description_font_weight_300"
                android:fontFamily="@font/roboto_light"
                android:text="@string/text_description_connecting_to_WiFi"
                android:gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="32dp"
                app:layout_constraintTop_toBottomOf="@id/step_progress_bar_information"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/remote_enable_layout"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/remote_enable_button_height"
            android:gravity="center"
            android:layout_marginBottom="@dimen/tumbler_btn_margin_bottom"
            android:layout_marginStart="@dimen/tumbler_btn_margin_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/remote_enable_toggle_switch"
                style="@style/ToggleSwitchStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:enabled="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/remote_enable_text_view"
                style="@style/StyleRemoteEnableTextView"
                tools:visibility="visible">
            </TextView>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.whirlpool.hmi.uicomponents.widgets.buttons.NavigationButton
                android:id="@+id/navigation_button_right"
                style="@style/TumblerPrimaryBtnStyle"
                android:layout_marginEnd="@dimen/tumbler_btn_margin_bottom"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="@string/text_button_next" />

        <com.whirlpool.hmi.uicomponents.widgets.progress.Stepper
            android:id="@+id/stepper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

